Fix number overflow, fix divide by zero, add backspace, and add support for numpad and other keys.

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin 10px;
+    margin 5px;
 }
 
 #row {
@@ -39,9 +39,13 @@
 
 button {
     flex: 1;
-    margin: 10px;
+    margin: 5px;
     font-weight: bold;
     font-size: 200%;
     border-radius: 10px;
     border: 1px solid black;
+}
+
+#operator, #equals {
+    background-color: lightblue;
 }
